Changed Background and some CSS

--- a/styles.css
+++ b/styles.css
@@ -1,37 +1,33 @@
 body {
   text-align: center;
-  background-color: black;
-  background-image:url("https://media1.giphy.com/media/aRZ4vTsHnyW6A/giphy.webp?cid=ecf05e47aynhzxdajqweimsx5lqva4oflt8nv3vehcez6jb7&rid=giphy.webp");
+  background-color: #ffffff;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' %3E%3Cdefs%3E%3ClinearGradient id='a' x1='0' x2='0' y1='0' y2='1'%3E%3Cstop offset='0' stop-color='%2380F'/%3E%3Cstop offset='1' stop-color='%23f40'/%3E%3C/linearGradient%3E%3C/defs%3E%3Cpattern id='b' width='24' height='24' patternUnits='userSpaceOnUse'%3E%3Ccircle fill='%23ffffff' cx='12' cy='12' r='12'/%3E%3C/pattern%3E%3Crect width='100%25' height='100%25' fill='url(%23a)'/%3E%3Crect width='100%25' height='100%25' fill='url(%23b)' fill-opacity='0.1'/%3E%3C/svg%3E");
+  background-attachment: fixed;
 }
 
 h1 {
   font-size: 5rem;
-  color: #DBEDF3;
+  color: #dbedf3;
   font-family: "Arvo", cursive;
-  text-shadow: 3px 0 #DA0463;
-
+  text-shadow: 3px 0 #da0463;
 }
 
 footer {
-  color: #DBEDF3;
+  color: #dbedf3;
   font-family: sans-serif;
 }
 
 .w {
   background-image: url("images/hindi.png");
-
 }
 
 .a {
   background-image: url("images/hindi.png");
-
-
 }
 
 .s {
-background-image: url("images/hindi.png");
+  background-image: url("images/hindi.png");
 }
-
 
 .set {
   margin: 10% auto;
@@ -43,7 +39,7 @@ background-image: url("images/hindi.png");
 }
 
 .pressed {
-  box-shadow: 0 3px 4px 0 #DBEDF3;
+  box-shadow: 0 3px 4px 0 #dbedf3;
   opacity: 0.5;
 }
 
@@ -53,13 +49,13 @@ background-image: url("images/hindi.png");
 
 .drum {
   outline: none;
-  border: 10px solid #404B69;
+  border: 10px solid #404b69;
   font-size: 2rem;
-  font-family: 'Arvo', cursive;
+  font-family: "Arvo", cursive;
   line-height: 2;
   font-weight: 900;
   color: white;
-  text-shadow: 3px 0 #DBEDF3;
+  text-shadow: 3px 0 #dbedf3;
   border-radius: 15px;
   display: inline-block;
   width: 150px;
@@ -68,12 +64,28 @@ background-image: url("images/hindi.png");
   margin: 10px;
   background-color: white;
 }
-.stop{
+.stop {
   border-radius: 12px;
   width: 100px;
   height: 50px;
   margin-top: 40px;
   background-color: black;
   color: white;
-  font-family: 'Arvo',cursive;
+  font-family: "Arvo", cursive;
+}
+
+@media only screen and (max-width: 600px) {
+  .set {
+    display: flex;
+    flex-direction: column;
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+
+  .btn-css {
+    padding-top: 100px;
+    padding-bottom: 20px;
+    width: 60%;
+    height: 60%;
+  }
 }
