--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
   text-align: center;
   background-color: #ffffff;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' %3E%3Cdefs%3E%3ClinearGradient id='a' x1='0' x2='0' y1='0' y2='1'%3E%3Cstop offset='0' stop-color='%2380F'/%3E%3Cstop offset='1' stop-color='%23f40'/%3E%3C/linearGradient%3E%3C/defs%3E%3Cpattern id='b' width='24' height='24' patternUnits='userSpaceOnUse'%3E%3Ccircle fill='%23ffffff' cx='12' cy='12' r='12'/%3E%3C/pattern%3E%3Crect width='100%25' height='100%25' fill='url(%23a)'/%3E%3Crect width='100%25' height='100%25' fill='url(%23b)' fill-opacity='0.1'/%3E%3C/svg%3E");
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' %3E%3Cdefs%3E%3ClinearGradient id='a' x1='0' x2='0' y1='0' y2='1' gradientTransform='rotate(266,0.5,0.5)'%3E%3Cstop offset='0' stop-color='%2380F'/%3E%3Cstop offset='1' stop-color='%23f40'/%3E%3C/linearGradient%3E%3C/defs%3E%3Cpattern id='b' width='17' height='17' patternUnits='userSpaceOnUse'%3E%3Ccircle fill='%23ffffff' cx='8.5' cy='8.5' r='8.5'/%3E%3C/pattern%3E%3Crect width='100%25' height='100%25' fill='url(%23a)'/%3E%3Crect width='100%25' height='100%25' fill='url(%23b)' fill-opacity='0.2'/%3E%3C/svg%3E");
   background-attachment: fixed;
 }
 
@@ -18,15 +18,15 @@ footer {
 }
 
 .w {
-  background-image: url("images/hindi.png");
+  background-image: url("images/hindi1.png");
 }
 
 .a {
-  background-image: url("images/hindi.png");
+  background-image: url("images/hindi1.png");
 }
 
 .s {
-  background-image: url("images/hindi.png");
+  background-image: url("images/hindi1.png");
 }
 
 .set {
@@ -47,23 +47,32 @@ footer {
   color: red;
 }
 
-.drum {
-  outline: none;
-  border: 10px solid #404b69;
-  font-size: 2rem;
-  font-family: "Arvo", cursive;
-  line-height: 2;
-  font-weight: 900;
-  color: white;
-  text-shadow: 3px 0 #dbedf3;
-  border-radius: 15px;
-  display: inline-block;
-  width: 150px;
-  height: 150px;
-  text-align: center;
-  margin: 10px;
-  background-color: white;
+@media only screen and (min-width: 600px) {
+  .drum {
+    outline: none;
+    border: 10px solid #404b69;
+    font-size: 2rem;
+    font-family: "Arvo", cursive;
+    line-height: 2;
+    font-weight: 900;
+    color: white;
+    text-shadow: 3px 0 #dbedf3;
+    border-radius: 15px;
+    width: 150px;
+    height: 150px;
+    text-align: center;
+    margin: 10px;
+    background-color: white;
+  }
+
+  .set {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
 }
+
 .stop {
   border-radius: 12px;
   width: 100px;
@@ -77,12 +86,17 @@ footer {
 @media only screen and (max-width: 600px) {
   .set {
     display: flex;
+    flex-wrap: wrap;
     flex-direction: column;
     padding-top: 20px;
     padding-bottom: 20px;
   }
 
-  .btn-css {
+  .drum {
+    display: block;
+  }
+
+  .btn {
     padding-top: 100px;
     padding-bottom: 20px;
     width: 60%;
