Add New Categories

--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,26 @@ footer {
   background-image: url("images/hindi1.png");
 }
 
+.c {
+  background-image: url("images/hindi1.png");
+}
+
+.f {
+  background-image: url("images/hindi1.png");
+}
+
+.j {
+  background-image: url("images/hindi1.png");
+}
+
+.p {
+  background-image: url("images/hindi1.png");
+}
+
+.r {
+  background-image: url("images/hindi1.png");
+}
+
 .set {
   margin: 10% auto;
 }
