add background to categories

--- a/styles.css
+++ b/styles.css
@@ -49,6 +49,22 @@ footer {
   background-image: url("images/hindi1.png");
 }
 
+.i {
+  background-image: url("images/hindi1.png");
+}
+
+.rp {
+  background-image: url("images/hindi1.png");
+}
+
+.in {
+  background-image: url("images/hindi1.png");
+}
+
+.d {
+  background-image: url("images/hindi1.png");
+}
+
 .set {
   margin: 10% auto;
 }
